--- a/dc-metro-map/views/dcmetro.jade
+++ b/dc-metro-map/views/dcmetro.jade
@@ -19,7 +19,8 @@ block content
         div.input
             label(for="checkbox")
             input(type='checkbox', name='filters' onclick='showStations();' value='red' checked)
-            | Red Line
+            #| Red Line
+            | Silver Line
         div.input
             label(for="checkbox")
             input(type='checkbox', name='filters' onclick='showStations();' value='green' checked)
